--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.prestador.CadastroPrestador"></activity>
+        <activity android:name=".activities.administrador.AddTipoPrestador"></activity>
+        <activity
+            android:name=".activities.administrador.TTipoPrestador2"
+            android:label="@string/title_activity_ttipo_prestador2"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".activities.prestador.CadastroPrestador" />
         <activity android:name=".activities.cliente.CadastroCliente" />
         <activity android:name=".activities.Cadastro" />
         <activity android:name=".activities.administrador.TTipoPrestador" />
