--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,12 @@
         android:theme="@style/AppTheme">
         <activity android:name=".activities.administrador.AddTipoPrestador"></activity>
         <activity
-            android:name=".activities.administrador.TTipoPrestador2"
-            android:label="@string/title_activity_ttipo_prestador2"
+            android:name=".activities.administrador.TTipoPrestador"
+            android:label="@string/title_activity_ttipo_prestador"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".activities.prestador.CadastroPrestador" />
         <activity android:name=".activities.cliente.CadastroCliente" />
         <activity android:name=".activities.Cadastro" />
-        <activity android:name=".activities.administrador.TTipoPrestador" />
         <activity android:name=".activities.Login" />
         <activity android:name=".activities.MainActivity">
             <intent-filter>
