--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.administrador.AddTipoPrestador"></activity>
+        <activity android:name=".activities.administrador.EditTipoPrestador"></activity>
+        <activity android:name=".activities.administrador.AddTipoPrestador" />
         <activity
             android:name=".activities.administrador.TTipoPrestador"
             android:label="@string/title_activity_ttipo_prestador"
