--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.administrador.TOrdemServico"></activity>
+        <activity android:name=".activities.administrador.EditOrdemServico"></activity>
+        <activity android:name=".activities.administrador.TOrdemServico" />
         <activity android:name=".activities.administrador.EditSolicitacao" />
         <activity android:name=".activities.administrador.TOrdemPagamento" />
         <activity android:name=".activities.administrador.TSolicitacao" />
