--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.administrador.EditOrdemServico"></activity>
+        <activity android:name=".activities.cliente.PainelCliente"></activity>
+        <activity android:name=".activities.administrador.EditOrdemServico" />
         <activity android:name=".activities.administrador.TOrdemServico" />
         <activity android:name=".activities.administrador.EditSolicitacao" />
         <activity android:name=".activities.administrador.TOrdemPagamento" />
+        <activity android:name=".activities.administrador.EditOrdemPagamento" />
         <activity android:name=".activities.administrador.TSolicitacao" />
         <activity android:name=".activities.administrador.EditTipoPrestador" />
         <activity android:name=".activities.administrador.AddTipoPrestador" />
