--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.Login2"></activity>
+        <activity android:name=".activities.Login"></activity>
         <activity android:name=".activities.prestador.PainelPrestador" />
         <activity android:name=".activities.cliente.PainelCliente" />
         <activity android:name=".activities.administrador.EditOrdemServico" />
@@ -30,7 +30,6 @@
         <activity android:name=".activities.prestador.CadastroPrestador" />
         <activity android:name=".activities.cliente.CadastroCliente" />
         <activity android:name=".activities.Cadastro" />
-        <activity android:name=".activities.Login" />
         <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
