Inserção de telas painel do cliente.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.Login"></activity>
+        <activity android:name=".activities.cliente.TMinhasOrdens"></activity>
+        <activity android:name=".activities.cliente.TMinhasSolicitacoes" />
+        <activity android:name=".activities.Login" />
         <activity android:name=".activities.prestador.PainelPrestador" />
         <activity android:name=".activities.cliente.PainelCliente" />
         <activity android:name=".activities.administrador.EditOrdemServico" />
