--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     package="contrato.com">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -12,6 +11,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activities.MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".activities.administrador.Administrador" />
+
         <activity android:name=".activities.prestador.EditPSolicitacoes"></activity>
         <activity
             android:name=".activities.prestador.TSolicitacoesAbertas"
@@ -23,7 +31,7 @@
             android:label="@string/title_activity_tminhas_solicitacoes"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".activities.Login"
-            android:label="@string/title_activity_login" />/>
+            android:label="@string/title_activity_login" />
         <activity android:name=".activities.prestador.PainelPrestador" />
         <activity android:name=".activities.cliente.PainelCliente" />
         <activity android:name=".activities.administrador.EditOrdemServico" />
@@ -41,20 +49,14 @@
         <activity android:name=".activities.administrador.EditTipoPrestador" />
         <activity android:name=".activities.administrador.AddTipoPrestador" />
         <activity android:name=".activities.prestador.CadastroPrestador" />
-        <activity android:name=".activities.cliente.CadastroCliente" />
+        <activity android:name=".activities.cliente.CadastroCliente"
+            android:label="@string/title_activity_cadastro_cliente"/>
         <activity
             android:name=".activities.administrador.TTipoPrestador"
             android:label="@string/title_activity_ttipo_prestador"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".activities.Cadastro" />
-        <activity android:name=".activities.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".activities.administrador.Administrador" />
     </application>
+
 
 </manifest>
