--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     implementation 'com.squareup.okhttp3:okhttp:3.4.1'
     implementation 'com.android.support:gridlayout-v7:26.1.0'
-
+    implementation 'com.github.rtoshiro.mflibrary:mflibrary:1.0.0'
 
 }
